[package]
name = "hifive1"
version = "0.11.0"
repository = "https://github.com/riscv-rust/hifive1"
authors = ["David Craven <david@craven.ch>"]
categories = ["embedded", "hardware-support", "no-std"]
description = "Board support crate for HiFive1 and LoFive boards"
keywords = ["riscv", "register", "peripheral"]
license = "ISC"
edition = "2018"
rust-version = "1.59"

[dependencies]
e310x-hal = { git = "https://github.com/greenlsi/e310x-hal.git", branch = "master" }
embedded-hal = "0.2.7"
riscv = { git = "https://github.com/greenlsi/riscv.git" }
nb = "1.0.0"

[dev-dependencies]
panic-halt = "0.2"
riscv-rt = "0.11.0"

[features]
board-hifive1 = []
board-hifive1-revb = ["e310x-hal/g002"]
board-redv = ["e310x-hal/g002"]
board-lofive = []
board-lofive-r1 = ["e310x-hal/g002"]
virq = ["e310x-hal/virq"]

[package.metadata.docs.rs]
features = ['board-hifive1-revb']
